# cbi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cbi/: bounded.h  cbi.h  details.h
tests/: CMakeLists.txt  test_cbi.cpp
